0.1 09Oct2024
* initial version
0.2
* fix missing semikolon in handle_charref()
* BLOB replaced with LONGBLOB
* process comments in JavaScript files
* Belchertown support
* support SVG image
* fix action `noremove`